--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.2",
     "morgan": "^1.10.0",
-    "multer": "^1.4.3",
-    "node": "^16.10.0"
+    "multer": "^1.4.3"
   },
   "devDependencies": {
     "concurrently": "^6.2.0",
