--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "MERN Shopping card",
   "main": "index.js",
   "type": "module",
+  "engines": {
+    "node": "14.13.1"
+  },
   "scripts": {
     "start": "node backend/server",
     "server": "nodemon backend/server",
