--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "proshop",
   "version": "1.0.0",
   "description": "MERN Shopping card",
-  "main": "index.js",
+  "main": "server.js",
   "type": "module",
   "engines": {
     "node": "14.13.1"
